# lifetime-thread

./: Cargo.toml  readme.md
src/: inner.rs  lib.rs  outer.rs
tests/: integration_test.rs
