[package]
name = "lifetime-thread"
version = "0.1.1"
authors = ["liangyongrui <leungyongrui@gmail.com>"]
edition = "2018"
description = "A thread with a lifetime. Divide a value into master and slave. After the lifetime of the master value ends, the slave value will not be accessible."
license = "MIT OR Apache-2.0"
repository = "https://github.com/liangyongrui/lifetime-thread"
readme = "readme.md"
keywords = ['lifetime', 'thread']
categories = ['lifetime', 'thread']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crossbeam-epoch = "0.8"
lazy_static = "1.4"
